fixed the weird case where the gems would be squished together if the character didnt have many items on

--- a/src/components/Skills.scss
+++ b/src/components/Skills.scss
@@ -8,6 +8,10 @@
   grid-auto-flow: row;
 }
 
+.skills-container {
+  min-width: 270px;
+}
+
 .gemGroup {
   display: flex;
   justify-content: center;
